Core/dev exp (#1)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro'
+
+const foo = 'asdfasd'
 ---
 
 <Layout>
-    <h1>Working</h1>
+  <h1>Working</h1>
+  <p>{foo}</p>
 </Layout>
