setup tailwind css

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import '../styles/global.css'
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,7 +10,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Aldo R. Robles - Links</title>
   </head>
-  <body>
+  <body class="min-h-screen min-w-80 antialiased">
     <slot />
   </body>
 </html>
