--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro'
 
-const foo = 'asdfasd'
+const desc = 'Description'
 ---
 
 <Layout>
-  <h1>Working</h1>
-  <p>{foo}</p>
+  <div class="grid min-h-screen place-content-center">
+    <div class="flex flex-col items-center gap-2">
+      <h1 class="text-xl font-medium">Working</h1>
+      <p>{desc}</p>
+    </div>
+  </div>
 </Layout>
