--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,15 @@ import '~/styles/global.css'
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Aldo R. Robles - Links</title>
   </head>
-  <body class="min-h-screen min-w-80 antialiased">
-    <slot />
+  <body class="flex min-h-screen min-w-80 flex-col antialiased">
+    <main class="mx-auto max-w-[65ch] flex-1 py-16">
+      <slot />
+    </main>
+    <footer
+      class="text-fg-muted flex flex-col gap-2 pt-12 pb-8 text-center text-sm uppercase"
+    >
+      <p>&copy; Aldo R. Robles - 2025</p>
+      <p class="text-xs">Tinogasta, Catamarca - Argentina</p>
+    </footer>
   </body>
 </html>
