--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,19 +1,19 @@
 @font-face {
-  font-family: 'Melodrama';
+  font-family: 'Departure Mono';
   src:
-    url('/assets/fonts/Melodrama-Variable.woff2') format('woff2'),
-    url('/assets/fonts/Melodrama-Variable.woff') format('woff');
-  font-weight: 300 900;
-  font-display: swap;
-  font-style: normal;
+    url('/assets/fonts/DepartureMono-Regular.woff2') format('woff2'),
+    url('/assets/fonts/DepartureMono-Regular.woff') format('woff');
+  font-feature-settings: 'locl';
 }
 
 @font-face {
-  font-family: 'Satoshi';
-  src:
-    url('/assets/fonts/Satoshi-Variable.woff2') format('woff2'),
-    url('/assets/fonts/Satoshi-Variable.woff') format('woff');
-  font-weight: 300 900;
-  font-display: swap;
+  font-family: 'JetBrains Mono';
   font-style: normal;
+  font-display: swap;
+  font-weight: 100 800;
+  src: url('/assets/fonts/JetBrains-Mono.woff2') format('woff2-variations');
+  unicode-range:
+    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+    U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212,
+    U+2215, U+FEFF, U+FFFD;
 }
