--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
+import { Icon } from 'astro-icon/components'
 import Link from '~/components/Link.astro'
 import Layout from '~/layouts/Layout.astro'
+import CopyButton from '~/components/CopyButton.astro'
 
 const links = [
   { label: 'linkedin', href: 'https://linkedin.com', iconName: 'linkedin' },
@@ -30,6 +32,21 @@ const links = [
     </section>
     <section class="grid w-full grid-cols-1 gap-2">
       {links.map(link => <Link link={link} />)}
+    </section>
+    <section
+      class="border-fg-muted/50 text-fg-muted w-full border p-4 text-sm uppercase"
+    >
+      <div class="flex flex-col gap-2">
+        <h1 class="text-fg">Get in touch</h1>
+        <p>
+          Whether it’s a project or just a hello, I’d love to hear from you.
+        </p>
+      </div>
+
+      <div class="mt-6">
+        <code>email@email.com</code>
+        <CopyButton text="demo@email.com" />
+      </div>
     </section>
   </div>
 </Layout>
