--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import BaseHead from '~/components/BaseHead.astro'
 import Footer from '~/components/Footer.astro'
 import '~/styles/fonts.css'
 import '~/styles/global.css'
@@ -7,10 +8,7 @@ import '~/styles/global.css'
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Aldo R. Robles - Links</title>
+    <BaseHead />
   </head>
   <body class="flex min-h-screen min-w-80 flex-col antialiased">
     <main class="mx-auto max-w-[65ch] flex-1 py-16">
