--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'Departure Mono';
-  src:
-    url('/assets/fonts/DepartureMono-Regular.woff2') format('woff2'),
-    url('/assets/fonts/DepartureMono-Regular.woff') format('woff');
+  src: url('/assets/fonts/DepartureMono-Regular.woff2') format('woff2');
   font-feature-settings: 'locl';
 }
 
