--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -62,3 +62,6 @@ const ogImage = new URL(image ? image : config.image, Astro.url).href
 
 <!-- enable transitions -->
 <ClientRouter fallback="none" />
+
+<!-- Sitemap -->
+<link rel="sitemap" href="/sitemap-index.xml" />
