fix font size on md

--- a/src/sections/HeaderSection.astro
+++ b/src/sections/HeaderSection.astro
@@ -3,7 +3,7 @@
     <h1 class="text-fg-muted text-sm uppercase">
       Aldo R. Robles - Software Developer
     </h1>
-    <h2 class="font-display text-lg uppercase">
+    <h2 class="font-display text-lg uppercase md:text-2xl">
       Building simple solutions for complex problems ♥
     </h2>
   </div>
