add site description & micro site interactions

--- a/src/components/CopyButton.astro
+++ b/src/components/CopyButton.astro
@@ -11,7 +11,7 @@ const { text } = Astro.props
 <button
   id="copy-btn"
   type="button"
-  class="bg-[#d6d3a8] p-2 text-black"
+  class="ring-offset-canvas ring-primary cursor-pointer rounded-none bg-[#d6d3a8] p-2 text-black ring-offset-2 outline-none hover:opacity-90 focus-visible:ring-2"
   data-copy-text={text}
   aria-label="Copy to clipboard"
 >
