--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
   --color-canvas: #10100e;
   --color-fg: #ffffe3;
   --color-fg-muted: #7e7e72;
+  --color-primary: #aeb4ce;
 
   --font-display: 'Departure Mono', monospace;
   --font-mono: 'Jetbrains Mono', monospace;
